// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`matches snapshot with tabs 1`] = `
<div
  class="sc-bwzfXH jpYVOX"
>
  <h3
    class="sc-bdVaJa biEvWz sc-htpNat jVQasR"
    data-testid="location"
  >
    Phone
  </h3>
  <div
    class="sc-dnqmqq iFsitv"
  >
    <a
      aria-current="page"
      class="sc-bxivhb cjgYpn sc-iwsKbI kZQpJX active"
      displaystyle="9"
      href="/phone"
      size="2"
    >
      <test-file-stub
        classname="sc-gzVnrw iJuChZ"
      />
      <p
        class="sc-bdVaJa jCnOyj sc-htoDjs kQKncc"
      >
        Contacts
      </p>
    </a>
    <a
      class="sc-bxivhb cjgYpn sc-iwsKbI kZQpJX"
      displaystyle="9"
      href="/phone/calls"
      size="2"
    >
      <test-file-stub
        classname="sc-gzVnrw iJuChZ"
      />
      <p
        class="sc-bdVaJa jCnOyj sc-htoDjs kQKncc"
      >
        Calls
      </p>
    </a>
    <a
      class="sc-bxivhb cjgYpn sc-iwsKbI kZQpJX"
      displaystyle="9"
      href="/phone/dial"
      size="2"
    >
      <test-file-stub
        classname="sc-gzVnrw iJuChZ"
      />
      <p
        class="sc-bdVaJa jCnOyj sc-htoDjs kQKncc"
      >
        Dial
      </p>
    </a>
  </div>
  <div />
</div>
`;

exports[`matches snapshot without tabs 1`] = `
<div
  class="sc-bwzfXH jpYVOX"
>
  <h3
    class="sc-bdVaJa biEvWz sc-htpNat jVQasR"
    data-testid="location"
  >
    Overview
  </h3>
  <div
    class="sc-dnqmqq iFsitv"
  />
  <div />
</div>
`;
